--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev:only": "vite dev --host",
+    "dev": "vite dev --host",
     "build": "vite build",
     "preview": "vite preview",
     "host": "vite"
